OptiX denoising at high resolutions causes artifacts #92308

Closed
opened 2021-10-18 10:51:35 +02:00 by Alaska · 15 comments
Member

System Information:
Operating system: Linux-5.14.0-2-amd64-x86_64-with-glibc2.33 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.63.01

Blender Version:
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-18 07:42, hash: 4f3f79c382
Worked: Unsure

Short description of error:
With OptiX denoising enabled and rendering a scene at a high resolution, some artifacts can occur with the denoising.

OptiX broken.png Expected.png
Denoising result Render before denoising

Exact steps for others to reproduce the error:

  1. Create a scene in Cycles that's quick to render (decrease the sample count to 1 for fast rendering).
  2. Enabled OptiX denoising for the final render.
  3. Increase the render resolution to something large (7680x4320 in my case)
  4. Render the scene. You will notice the final render appears broken after denoising.
**System Information:** Operating system: Linux-5.14.0-2-amd64-x86_64-with-glibc2.33 64 Bits Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.63.01 **Blender Version:** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-18 07:42, hash: `4f3f79c382` Worked: Unsure **Short description of error:** With OptiX denoising enabled and rendering a scene at a high resolution, some artifacts can occur with the denoising. |![OptiX broken.png](https://archive.blender.org/developer/F11240482/OptiX_broken.png)|![Expected.png](https://archive.blender.org/developer/F11240490/Expected.png)| | -- | -- | |Denoising result|Render before denoising| **Exact steps for others to reproduce the error:** 1. Create a scene in Cycles that's quick to render (decrease the sample count to 1 for fast rendering). 2. Enabled `OptiX` denoising for the final render. 3. Increase the render resolution to something large (7680x4320 in my case) 4. Render the scene. You will notice the final render appears broken after denoising.
Author
Member

Added subscriber: @Alaska

Added subscriber: @Alaska

Added subscribers: @iss, @mano-wii

Added subscribers: @iss, @mano-wii

Thanks for the report.
I don't have access to NVIDIA GPU at the moment.
@iss, can you reproduce this issue?

Thanks for the report. I don't have access to NVIDIA GPU at the moment. @iss, can you reproduce this issue?

Can't reproduce, got quite clear looking cube.

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12

Can't reproduce, got quite clear looking cube. **System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12
Author
Member

It's possible this is a Linux only issue. I will retest on Windows 11 and report back with results.

It should be noted that there are issues with OptiX denoising at all resolutions on Linux if Nvidia driver 495.29.05 is used #92472 (OptiX denoising artifacts with recent GPU driver 495.29.05 or newer on Linux). Patrick Mours of Nvidia was going to take a look at it.

It's possible this is a Linux only issue. I will retest on Windows 11 and report back with results. It should be noted that there are issues with OptiX denoising at all resolutions on Linux if Nvidia driver 495.29.05 is used #92472 (OptiX denoising artifacts with recent GPU driver 495.29.05 or newer on Linux). Patrick Mours of Nvidia was going to take a look at it.
Author
Member

Testing on Windows at a resolution of 7680 x 4320 there were no issues. Testing at a higher resolution (15360 x 8640) the render turns completely black after denoising.

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.13
Blender version: 3.0.0 Alpha, branch: master, commit date: 2021-10-25 23:16, hash: 32cc9ff037

Testing on Windows at a resolution of 7680 x 4320 there were no issues. Testing at a higher resolution (15360 x 8640) the render turns completely black after denoising. **System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.13 Blender version: 3.0.0 Alpha, branch: master, commit date: 2021-10-25 23:16, hash: `32cc9ff037`

I can confirm black image with very high resolution after denoising.

I can confirm black image with very high resolution after denoising.

Added subscribers: @pmoursnv, @brecht

Added subscribers: @pmoursnv, @brecht

CC @pmoursnv.

CC @pmoursnv.
Member

The corrupted result @Alaska is seeing was a driver bug that has since been fixed. Updating to driver 472.12 or newer on Windows or 470.74 or newer on Linux solves this (470.63 still shows it).

The OptiX denoiser does have an upper limit as to how many pixels it can denoise at once apart from that. optixDenoiserComputeMemoryResources returns OPTIX_ERROR_INVALID_VALUE when that limit is reached, but it looks like Cycles does not currently propagate that error back to the user (it shows up in the log though), which is why you are just getting a black image at very high resolutions.
There is a helper function in the OptiX SDK that splits a large image into smaller tiles and denoises them individually though, so could use that instead of just throwing an error (similar to how rendering is also split in tiles).

The corrupted result @Alaska is seeing was a driver bug that has since been fixed. Updating to driver 472.12 or newer on Windows or 470.74 or newer on Linux solves this (470.63 still shows it). The OptiX denoiser does have an upper limit as to how many pixels it can denoise at once apart from that. optixDenoiserComputeMemoryResources returns OPTIX_ERROR_INVALID_VALUE when that limit is reached, but it looks like Cycles does not currently propagate that error back to the user (it shows up in the log though), which is why you are just getting a black image at very high resolutions. There is a helper function in the OptiX SDK that splits a large image into smaller tiles and denoises them individually though, so could use that instead of just throwing an error (similar to how rendering is also split in tiles).

It would be good to implement denoising in smaller tiles then, in a way that's invisible to the user.

It's probably simplest to implement this in the OptiX device. It could also be done at the level where we read back tiles from disk for denoising and reduce memory usage there by denoising in tiles, though not sure we should couple tile sizes there to OptiX limits.

It would be good to implement denoising in smaller tiles then, in a way that's invisible to the user. It's probably simplest to implement this in the OptiX device. It could also be done at the level where we read back tiles from disk for denoising and reduce memory usage there by denoising in tiles, though not sure we should couple tile sizes there to OptiX limits.

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by blender/cycles@77c6b1e41f

This issue was referenced by blender/cycles@77c6b1e41feb33048cbc4dcc239386c7f6cda64a

This issue was referenced by 1766549418

This issue was referenced by 17665494186816cebb9e8304199e40f9ee033990
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Patrick Mours self-assigned this 2021-12-02 12:11:25 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92308
No description provided.